ProjetCompil/Verif/Test/fail/interval3.cas
program
   i : 2..true;
begin
   i := 1; 
end.